--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,131 @@
-body {
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+:root {
+  --background: #d1d1d1;
+}
+html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+}
+body {
+  overflow: hidden;
+  background: var(--background);
+  min-height: 100vh;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main-app {
+  margin: 0 auto;
+  max-width: 320px;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form {
+  margin-top: 1.5rem;
+  width: 100%;
+  display: flex;
+}
+
+.form input[type="text"] {
+  height: 2rem;
+  flex-grow: 1;
+}
+
+.form button {
+  border: none;
+  flex-grow: 0.25;
+  background: rgba(81, 227, 164, 1);
+  cursor: pointer;
+}
+
+.form button:hover {
+  background: rgba(81, 227, 164, 0.95);
+}
+
+.items-container {
+  margin-top: 2.5rem;
+  padding: 0.9rem;
+  border: 1px solid white;
+  border-radius: 5px;
+  box-shadow: 2px 2px 0px rgba(255, 255, 255, 0.3);
+  max-width: 100%;
+  min-width: 70%;
+  background: rgb(255, 255, 255);
+}
+.items-container .item {
+  position: relative;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+  margin-bottom: 12px;
+  padding-bottom: 0.3rem;
+  transition: all 0.3s linear;
+}
+.items-container .item:last-child {
+  margin-bottom: 0;
+}
+.item .custom-checkbox {
+  position: absolute;
+  left: -99px;
+  opacity: 0;
+}
+
+.custom-checkbox + label {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-left: 1.5rem;
+  transition: all 0.3s linear;
+}
+.custom-checkbox + label::before {
+  content: " ";
+  width: 20px;
+  height: 20px;
+  border: 2px solid rgba(81, 227, 164, 1);
+  transform: scale(0.95);
+  display: block;
+  border-radius: 1000px;
+  position: absolute;
+  transition: all 0.2s linear 0.1s;
+  left: -1.5rem;
+}
+
+.custom-checkbox:checked + label::before {
+  background: rgba(81, 227, 164, 1);
+  transform: scale(1);
+  box-shadow: 0 0 2px rgba(81, 227, 164, 1);
+  display: block;
+}
+
+.custom-checkbox:checked + label {
+  color: rgba(0, 0, 0, 0.3);
+}
+
+.item button {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  border: none;
+  background: none;
+  cursor: pointer;
+  color: rgba(200, 0, 0, 0.6);
+  font-size: 0.6rem;
+  font-weight: 700;
 }
